fixed z-index of header(navbar) to 1000

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -269,6 +269,7 @@ html {
 
 .header {
     background: var(--background-primary);
+    z-index: 1000;
 }
 
 header .flex-wrapper {
